--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   "dependencies": {
     "@material-ui/core": "4.11.3",
     "@material-ui/icons": "4.11.2",
-    "@zeit/next-css": "1.0.1",
-    "@zeit/next-sass": "1.0.1",
     "chartist": "0.10.1",
     "classnames": "2.2.6",
     "history": "5.0.0",
@@ -26,7 +24,8 @@
     "react": "17.0.1",
     "react-chartist": "0.14.3",
     "react-dom": "17.0.1",
-    "react-swipeable-views": "0.13.9"
+    "react-swipeable-views": "0.13.9",
+    "sass": "^1.80.3"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,7 +43,15 @@
     ]
   },
   "optionalDependencies": {
-    "node-sass": "4.14.1",
     "typescript": "4.1.3"
-  }
+  },
+  "overrides": {
+    "postcss": "8.2.15",
+    "postcss-scss": "4.0.3"
+  },
+  "engines": {
+    "node": "16.x",
+    "npm": "8.x"
+  },
+  "packageManager": "npm@8"
 }
